# langchain-workshop

./: README.md  pyproject.toml
01-language-model-types/chat/: chat-completion-model-langchain.py  chat-completion-model.py
01-language-model-types/completion/: completion-model-langchain.py  completion-model.py
02-simple-chat/: chat-langchain.py  history.txt
