[tool.poetry]
name = "langchain-workshop"
version = "0.1.0"
description = ""
authors = ["Elvio Cavalcante <elviocb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
langchain = "^0.2.15"
python-dotenv = "^1.0.1"
langchain-community = "^0.2.14"
openai = "^1.42.0"
langchain-openai = "^0.1.23"
youtube-transcript-api = "^0.6.2"
faiss-cpu = "^1.8.0.post1"
langchain-experimental = "^0.0.64"
numexpr = "^2.10.1"
google-search-results = "^2.4.2"
chromadb = "^0.5.5"
matplotlib = "^3.9.2"
pyboxen = "^1.3.0"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^5.0.0"
botocore = "^1.35.10"
boto3 = "^1.35.10"
werkzeug = "^3.0.4"
pinecone-client = "^5.0.1"
pypdf = "^4.3.1"
watchdog = "^5.0.1"
tiktoken = "^0.7.0"
langfuse = "^2.45.2"
uuid = "^1.30"
redis = "^5.0.8"
backoff = "^2.2.1"
celery = "^5.4.0"
invoke = "^2.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
